5.0 изменения связанные со статистикой